<resources>
    <string name="app_name">AHEAD Mobile PCount</string>
    <string name="action_settings">Settings</string>
    <string name="enter_username">USERNAME</string>
    <string name="enter_password">PASSWORD</string>
    <string name="enter_button">Login</string>
    <string name="ahead_pcount">AHEAD MOBILE PCOUNT</string>
    <string name="pcount">PCount</string>
    <string name="report">Report</string>
    <string name="settings">Settings</string>
    <string name="enter_search"> Search SKU</string>
    <string name="def_qty">QUANTITY</string>
    <string name="action_filterby">Filter By</string>
    <string name="action_logout">Logout</string>
    <string name="action_post">Post Transaction</string>
    <string name="action_switch">Switch Branch</string>
    <string name="action_save_current">Save Current Work</string>
    <string name="action_check_printer">Connect Printer</string>
    <string name="action_print">Print</string>
    <string name="pcount_sharedprefKey">com.chasetech.pcount.PREFERENCE_FILE_KEY</string>
    <string name="logged_pref_key">isLoggedUSER</string>
    <string name="pref_masterfile_date">MASTERFILE_DATE_RELEASE</string>
    <string name="pref_userid">PREFUSERID</string>
    <string name="pref_db_backup_version">PREFDBBACKUPVERSION</string>
    <string name="pref_username">PREFUSERNAME</string>

    <string name="pref_allowIG">ALLOW_IG</string>
    <string name="pref_loggedUser">USER_LOGGED</string>
    <string name="pref_mkl_allitemsreqforposting">MKL_REQUIRED_ALL_BEFORE_POSTING</string>
    <string name="pref_mkl_allitemsreqforprinting">MKL_REQUIRED_ALL_BEFORE_PRINTING</string>
    <string name="pref_assort_allitemsreqforposting">ASSORT_REQUIRED_ALL_BEFORE_POSTING</string>
    <string name="pref_assort_allitemsreqforprinting">ASSORT_REQUIRED_ALL_BEFORE_PRINTING</string>
    <string name="pref_userclearpassword">USER_CLEAR_PASSWORD</string>
    <string name="pref_date_log">PREF_DATE_LOG</string>

    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth print.</string>
    <string name="connect_fail">Unable to connect device</string>
    <string name="connect_lost">Device connection was lost</string>
    <string name="secure_connect">Connect a device - Secure</string>
    <string name="insecure_connect">Connect a device - Insecure</string>
    <string name="toast_bt_na">bluetooth is not available</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">Printer</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_printers">Default bluetooth printer</string>
    <string-array name="pref_lists_printers">
        <item>Woosim Printer</item>
        <item>TSC Printer</item>
    </string-array>

    <string-array name="pref_lists_printers_values">
        <item>1</item>
        <item>2</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string name="action_error_send">Send error report</string>
    <string name="pref_header_database">Database</string>
    <string name="action_clear_updates">Clear update errors</string>
    <string name="pref_hash">MASTERFILE_HASHCODE</string>
    <string name="pref_mkl_validateDatePosting">MKL_VALIDATE_DATE_REPOSTING_MKL</string>
    <string name="pref_assort_validateDatePosting">PREF_VALIDATE_DATE_REPOSTING_ASSORT</string>
    <string name="pref_fix_ig">FIX_IG_BUG</string>
    <string name="pref_header_info">About PCount</string>

    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
</resources>
