<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="com.chasetech.pcount.Settings.SettingsActivity$PrinterPreferenceFragment"
        android:icon="@drawable/ic_printer"
        android:title="@string/pref_header_general" />

    <header
        android:fragment="com.chasetech.pcount.Settings.SettingsActivity$DatabasePreferenceFragment"
        android:icon="@drawable/ic_database"
        android:title="@string/pref_header_database" />

    <header
        android:fragment="com.chasetech.pcount.Settings.SettingsActivity$AboutPreferenceFragment"
        android:icon="@drawable/ic_info"
        android:title="@string/pref_header_info" />
<!--
    <header
        android:fragment="com.chasetech.pcount.Settings.SettingsActivity$NotificationPreferenceFragment"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/pref_header_notifications" />

    <header
        android:fragment="com.chasetech.pcount.Settings.SettingsActivity$DataSyncPreferenceFragment"
        android:icon="@drawable/ic_sync_black_24dp"
        android:title="@string/pref_header_data_sync" />-->

</preference-headers>
