<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/per_item_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1">

        <TextView
            android:text="@string/ahead_pcount"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:textSize="25sp"
            android:layout_gravity="bottom"
            android:gravity="bottom|center"
            android:textColor="@color/textPrimary" />

        <TextView
            android:id="@+id/tvwVersion"
            android:text="v. 0"
            android:layout_width="match_parent"
            android:textSize="20sp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_gravity="top"
            android:textColor="@color/textPrimary"
            android:gravity="center_horizontal"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edit_username"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_username"
            android:inputType="text|textNoSuggestions"
            android:layout_gravity="center"
            android:gravity="center"
            android:drawableLeft="@drawable/ic_action_person" />

        <EditText
            android:id="@+id/edit_password"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_password"
            android:layout_gravity="center"
            android:inputType="textPassword"
            android:drawableLeft="@drawable/ic_action_secure"
            android:gravity="center"/>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/enter_button"
            android:layout_gravity="center"
            android:background="@drawable/login_btn_bg" />

    </LinearLayout>

</LinearLayout>
